--- a/modules/admin_manual/pages/configuration/general_topics/impersonate_users.adoc
+++ b/modules/admin_manual/pages/configuration/general_topics/impersonate_users.adoc
@@ -43,7 +43,7 @@ By default, when the Impersonate app is installed, only the ownCloud administrat
 
 When enabled and configured, only a group's administrator can impersonate members of their group. For example, if an ownCloud administrator restricts user impersonation only to the group: `group1`, then only `group1`'s administrators can impersonate users belonging to `group1`. No other users can impersonate other users.
 
-To configure it, in the administrator settings panel, which you can find under menu:User Name[Settings > Admin > User Authentication], you'll see a section titled: btn:[Impersonate Settings].
+To configure it, go to the administrator settings panel, which you can find under menu:User Name[Settings > Admin > User Authentication]. You'll see a section titled: btn:[Impersonate Settings].
 
 * If you want to allow group admins to impersonate users within groups which they administer, click btn:[Allow all group admins to impersonate users within the groups they are admins of].
 +
