--- a/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_config_commands.adoc
+++ b/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_config_commands.adoc
@@ -30,25 +30,26 @@ The following apps, core functions or documents use/refer to `config:app` settin
 * xref:configuration/user/user_management.adoc#enabling-custom-groups[Custom Groups]
 * xref:configuration/files/file_sharing_configuration.adoc[File Sharing]
 * xref:configuration/server/security/hsmdaemon/index.adoc[The HSM (Hardware Security Module) Daemon (hsmdaemon)]
-* xref:configuration/server/legal_settings_configuration.adoc[Legal Settings Configuration]
+* xref:configuration/general_topics/impersonate_users.adoc[Impersonating Users]
 * xref:configuration/user/user_auth_ldap.adoc[LDAP Integration]
+* xref:configuration/server/legal_settings_configuration.adoc[Legal Settings Configuration]
 * xref:configuration/files/manual_file_locking.adoc[Manual File Locking]
 * xref:maintenance/manually-moving-data-folders.adoc[Manually Move a Data Directory]
-* xref:configuration/server/virus-scanner-support.adoc[Virus Scanner Support]
 * xref:configuration/user/oidc/oidc.adoc[OpenID Connect (OIDC)]
 * xref:configuration/server/ui-configuration.adoc[UI Configuration]
+* xref:configuration/server/virus-scanner-support.adoc[Virus Scanner Support]
 
 .Enterprise
-* xref:enterprise/user_management/user_auth_shibboleth.adoc[Shibboleth Integration]
 * xref:enterprise/logging/admin_audit.adoc[Auditing]
 * xref:enterprise/file_management/files_lifecycle.adoc[File Lifecycle Management]
+* xref:enterprise/user_management/user_auth_shibboleth.adoc[Shibboleth Integration]
 
 .occ Commands
 * xref:configuration/server/occ_command.adoc#anti-virus[occ Anti-Virus]
 * xref:configuration/server/occ_command.adoc#auditing[occ Auditing]
 * xref:configuration/server/occ_command.adoc#brute-force-protection[occ Brute Force Protection]
-* xref:configuration/server/occ_command.adoc#custom-groups[occ Custom Groups]
 * xref:configuration/server/occ_command.adoc#collabora-online-secure-view[occ Collabora Online / Secure View]
+* xref:configuration/server/occ_command.adoc#custom-groups[occ Custom Groups]
 * xref:configuration/server/occ_command.adoc#encryption[occ Encryption]
 * xref:configuration/server/occ_command.adoc#file-lifecycle-management[occ File Lifecycle Management]
 * xref:configuration/server/occ_command.adoc#full-text-search[occ Full Text Search]
