Apply suggestions from code review
language review

--- a/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_previews_commands.adoc
+++ b/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_previews_commands.adoc
@@ -41,8 +41,8 @@ Description:
 
 [NOTE]
 ====
-* Cleanup previews is a database intense operation. The command can take a considerable amount of time when having the database and filesystem on NFS. Note that the command execution time is highly dependent on the total quantity of items in the database and not on possible items to be cleaned up.
-* Once started, the command cant be stopped regulary like with kbd:[CTRL+C], you need to end the process manually.
+* Cleaning up previews is a database-intense operation. The command can take a considerable amount of time when the database and filesystem are on NFS. Note that the command execution time depends on the total quantity of items in the database and not on the number of items likely to be cleaned up.
+* Once started, the command cannot be stopped, e.g. with kbd:[CTRL+C], you need to end the process manually.
 * If you have upgraded your system but the backgroundjob does not appear in the job list, you can manually add it.
 ====
 
