[10.11] [PR 650] Add the supported database connectors to docker install
Backport of PR #650

--- a/modules/admin_manual/pages/installation/docker/index.adoc
+++ b/modules/admin_manual/pages/installation/docker/index.adoc
@@ -17,7 +17,7 @@ With the image provided, ownCloud has added database connectors for the followin
 * Postgres
 * SQLite
 
-If you need a different connector or a different version of a connector provided, you have to manually create your own docker compose file.
+If you need a different connector or a different version of a connector, you have to manually create your own docker compose file.
 
 == Getting Started
 
