--- a/modules/admin_manual/pages/installation/docker/index.adoc
+++ b/modules/admin_manual/pages/installation/docker/index.adoc
@@ -3,6 +3,7 @@
 :dockerhub-url: https://hub.docker.com/r/owncloud/server
 :docker-compose-url: https://docs.docker.com/compose/
 :linux-server-doc-url: https://docs.linuxserver.io/faq
+:docker-compose-build-url: https://docs.docker.com/compose/compose-file/build/
 :description: ownCloud can be installed using the official ownCloud Docker image.
 
 == Introduction
@@ -17,7 +18,7 @@ With the image provided, ownCloud has added database connectors for the followin
 * Postgres
 * SQLite
 
-If you need a different connector or a different version of a connector, you have to manually create your own docker compose file.
+If you need a different connector or a different version of a connector, you have to manually create your own image based on the ownCloud image provided here. This could also be done directly in the {docker-compose-build-url}[docker compose file].
 
 == Getting Started
 
