--- a/modules/admin_manual/pages/configuration/files/external_storage/s3_compatible_object_storage_as_primary.adoc
+++ b/modules/admin_manual/pages/configuration/files/external_storage/s3_compatible_object_storage_as_primary.adoc
@@ -173,8 +173,7 @@ $CONFIG = [
 
 === Backblaze S3
 
-The S3 backend can also be used to mount the bucket of a Backblaze S3 object store via the Amazon S3
-API into the virtual filesystem. The class to be used is `OCA\Files_Primary_S3\S3Storage`:
+The S3 backend can also be used to mount the bucket of a Backblaze S3 object store via the Amazon S3 API into the virtual filesystem. The class to be used is `OCA\Files_Primary_S3\S3Storage`:
 
 [source,php]
 ----
