--- a/modules/admin_manual/pages/configuration/user/user_management.adoc
+++ b/modules/admin_manual/pages/configuration/user/user_management.adoc
@@ -9,7 +9,7 @@
 
 {description}
 
-Note that most user related tasks can also be managed via xref:configuration/server/occ_command.adoc#user-commands[occ commands for managing users].
+Note that most user-related tasks can also be managed via xref:configuration/server/occ_command.adoc#user-commands[occ commands for managing users].
 
 == Default View
 
@@ -29,17 +29,17 @@ image:configuration/user/users-page-gear.png[image]
 **User accounts** have the following **properties**:
 
 _Login Name (Username)_::
-  The unique ID of an ownCloud user. Note that it **cannot** be changed post creating the user. The user can login either using the login name or the E-mail address. 
+  The unique ID of an ownCloud user. Note that it **cannot** be changed after creating the user. The user can log in either using the login name or the e-mail address. 
 _Full Name_::
-  The user’s display name that appears on file shares, the ownCloud Web interface, and E-mails. Admins and users may change the Full Name anytime. If the Full Name is not set, it defaults to the login name.
+  The user’s display name that appears on file shares, the ownCloud Web interface and emails. Admins and users may change the full name anytime. If the full name is not set, it defaults to the login name.
 _Password_::
   The admin sets the new user’s first password. Both, the user and the admin can change the user’s password at anytime.
 _E-Mail_::
-  The admin sets the new user’s E-Mail. The user then gets an E-Mail to set the password. Both, the user and the admin can change the user’s E-Mail at anytime.
+  The admin sets the new user’s e-mail. The user then gets an e-mail to set the password. Both, the user and the admin can change the user’s e-mail at anytime.
 _Groups_::
   You may create system (non-LDAP) groups and assign system group memberships to users. By default, new users are not assigned to any groups.
 _Group Admin_::
-  Group admins are granted administrative privileges on system groups, and can add new users and remove existing users from those groups.
+  Group admins are granted administrative privileges on system groups and can add new users and remove existing users from those groups.
 _Quota_::
   The maximum disk space assigned to each user. Any user that exceeds the quota cannot upload or sync data. You have the option to include external storage in user quotas.
 
@@ -84,7 +84,7 @@ To set or change a user’s display name:
 
 image:configuration/user/delete-user-confirmation.png[The ownCloud delete user confirmation dialog.]
 
-To delete a user, hover your cursor over their name on the *Users* page, and click the trashcan icon that appears at the far right. You’ll then see a confirmation dialog appear, asking if you’re sure that you want to delete the user. 
+To delete a user, hover your cursor over their name on the *Users* page and click the trashcan icon that appears at the far right. You’ll then see a confirmation dialog appear, asking if you’re sure that you want to delete the user. 
 
 If you click btn:[Yes], the user is permanently deleted, including all of the files owned by the user, including all files they have shared. If you need to preserve the user’s files and shares, you must first download them from your ownCloud Files page, (which compresses them into a zip file). 
 
@@ -96,7 +96,7 @@ TIP: See xref:configuration/files/file_sharing_configuration.adoc[File Sharing C
 
 ownCloud has two types of administrators: 
 
-* *ownCloud Administrators* have full rights on your ownCloud server, and can access and modify all settings. To assign the ownCloud Administrators role to a user, simply add them to the `admin` group.
+* *ownCloud Administrators* have full rights on your ownCloud server and can access and modify all settings. To assign the ownCloud administrator role to a user, simply add them to the `admin` group.
 
 * *Group Administrators*. Group administrators have the rights to create, edit and delete users in their assigned system (non-LDAP) groups. Use the dropdown menus in the Group Admin column to assign group admin privileges.
 
@@ -175,13 +175,13 @@ This is what you set in the web UI drop down menu, and is how you set user quota
 
 === Default Quota
 
-This will be set if no quota is set, and is found in menu:Users Tab[Gear Wheel > Default Quota]. If the *Quota Field* is not set, but *Quota Default* is, and a systems administrator tries to set a quota for an LDAP user with *User Quota*, it will not work, since it is overridden by *Quota Default*.
+This will be used if no quota is set and is found in menu:Users Tab[Gear Wheel > Default Quota]. If the *Quota* is not set, but *Default Quota* is, and a systems administrator tries to set a quota for an LDAP user with *User Quota*, it will not work since it is overridden by *Default Quota*.
 
-Click the btn:[gear] icon on the lower left pane to set a default storage quota. This is automatically applied to new users. You may assign a different quota to any user by selecting from the *Quota* dropdown, selecting either a preset value or entering a custom value. When you create custom quotas, use the normal abbreviations for your storage values such as 500 MB, 5 GB, 5 TB, and so on.
+Click the btn:[gear] icon on the lower left pane to set a default storage quota. This is automatically applied to new users. You may assign a different quota to any user by selecting a preset value from the *Quota* dropdown or by entering a custom value. When you create custom quotas, use the usual abbreviations for your storage values such as 500 MB, 5 GB, 5 TB, and so on.
 
 === External Storage Quota
 
-You now have a configurable option in `config.php` that controls whether external storage is counted against user’s quotas. This is still experimental, and may not work as expected. The default is to not count external storage as part of user storage quotas. If you prefer to include it, then change the default `false` to `true`.:
+You now have a configurable option in `config.php` that controls whether external storage is counted against user’s quotas. This is still experimental and may not work as expected. The default is to not counting external storage as part of user storage quotas. If you prefer to include it, then change the default `false` to `true`.:
 
 [source,php]
 ----
@@ -190,15 +190,15 @@ You now have a configurable option in `config.php` that controls whether externa
 
 === Storage Space Considerations
 
-Metadata (such as thumbnails, temporary files, and encryption keys) takes up about 10% of disk space, but is not counted against user quotas. Users can check their used and available space on their Personal pages. Only files that originate with users count against their quotas, and not files shared with them that originate from other users. For example, if you upload files to a different user’s share, those files count against your quota. If you re-share a file that another user shared with you, that file does not count against your quota, but the originating user’s.
+Metadata (such as thumbnails, temporary files, and encryption keys) takes up about 10% of disk space but is not counted against user quotas. Users can check their used and available space on their Personal pages. Only files that originate from a user count against that user's quota, not files shared by other users. For example, if you upload files to a different user’s share, those files count against your quota. If you re-share a file that another user shared with you, that file does not count against your quota, but the originating user’s.
 
 Encrypted files are a little larger than unencrypted files; the unencrypted size is calculated against the user’s quota.
 
-Deleted files that are still in the trash bin do not count against quotas. The trash bin is set at 50% of quota. Deleted file aging is set at 30 days. When deleted files exceed 50% of quota then the oldest files are removed until the total is below 50%.
+Deleted files that are still in the trash bin do not count against quotas. The trash bin is set to 50% of quota. Deleted file aging is set to 30 days. When deleted files exceed 50% of quota, then the oldest files are removed until the total is below 50%.
 
 === Versions
 
-When version control is enabled, the older file versions are not counted against quotas.
+If version control is enabled, the older file versions are not counted against quotas.
 
 === Public Links
 
