--- a/modules/admin_manual/pages/installation/docker/index.adoc
+++ b/modules/admin_manual/pages/installation/docker/index.adoc
@@ -113,7 +113,7 @@ Only a few settings are required, these are:
 | `localhost:{std-port-http}`
 
 | `OWNCLOUD_TRUSTED_DOMAINS`
-| The ownCloud trusted domans
+| The ownCloud trusted domains
 | `localhost`
 
 | `ADMIN_USERNAME`
